# WolfshadeMud

./: .cproject  .project  AutoRun.sh  MUDLOG.TXT  Makefile  Promote.sh  README.md  Wolfshade_error_log.txt  bug.txt  initWS
docs/: BugEnhancements.xls  Exp Tables.xls  Format.doc  The Anti-Paladin.doc  The Cleric.doc  The Defiler.doc  The Druid.doc  The Empath.doc  The Mage.doc  The Paladin.doc  The Psionicist.doc  The Ranger.doc  The Rogue.doc  The Shaman.doc  The Warrior.doc  Wolfshade Classes.xls
files/: affect_messages.txt  ansititlescreen.txt  help.txt  motd.txt  namesnotallowed.txt  news.txt  oldnews.txt  skill_messages.txt  socials.txt  spell_messages.txt  titlescreen.txt
mobs/: 1.mob  110.mob  111.mob  120.mob  121.mob  122.mob  130.mob  140.mob  2.mob  200.mob  205.mob  210.mob  230.mob  240.mob  250.mob  251.mob  260.mob  300.mob  340.mob  500.mob  502.mob  503.mob  503.object  510.mob  511.mob  515.mob  516.mob  540.mob  (+2 more)
src/: Makefile.in  Wolfshade.dsp  Wolfshade.dsw  Wolfshade.opt  Wolfshade.plg  Wolfshade.sln  Wolfshade.vcproj  affect.cpp  affect.h  affectedby.cpp  anti.paladin.cpp  anti.paladin.h  armor.cpp  armor.h  ascii.stream.cpp  ascii.stream.h  attributes.cpp  attributes.h  bank.room.cpp  bank.room.h  barbarian.reference.cpp  barbarian.reference.h  brownie.reference.cpp  brownie.reference.h  caster.h  centaur.reference.cpp  centaur.reference.h  char.intermediate.cpp  char.intermediate.h  character.attributes.cpp  character.attributes.h  character.cpp  character.h  cleric.cpp  cleric.h  color.h  configure.in  constants.h  container.cpp  container.h  (+177 more)
(+107 files in other folders)
