dnl Process this file with autoconf to produce a configure script.
AC_INIT(affect.h)

dnl Checks for programs.
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CONFIG_HEADER(conf.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(memory.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(netinet/in.h)
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(sys/resource.h)
AC_CHECK_HEADERS(sys/socket.h)
AC_CHECK_HEADERS(netdb.h)
AC_CHECK_HEADERS(signal.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_PROG_CXX
AC_PROG_CXXCPP
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday)
AC_CHECK_FUNCS(getrlimit)
AC_CHECK_FUNCS(atoi)
AC_CHECK_FUNCS(atol)
AC_CHECK_FUNCS(close)
AC_CHECK_FUNCS(accept)
AC_CHECK_FUNCS(send)
AC_CHECK_FUNCS(recv)
AC_CHECK_FUNCS(socket)

AC_OUTPUT(Makefile)
